Hot fix for widget z-index.

--- a/src_widget/src/integration/integration.scss
+++ b/src_widget/src/integration/integration.scss
@@ -9,7 +9,7 @@
   top: 0;
   left: 0;
   background-color: rgba(33, 33, 33, 0.48);
-  z-index: 999;
+  z-index: 99999;
   transform: scale(0);
   will-change: transform;
 }
